# CS234-Battle-Royale-Final-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: baseline_agent.py  ppo_agent.py  random_agent.py  run_mdp_agent.py  run_mdp_experiment.py  run_nn_agent.py  run_nn_experiment.py  train_nn_agent.py
agents/checkpoints/: ppo_final.pt
battle_royale/: audio.py  config.py  main.py  network.py  obs.py  renderer.py  sim.py  train.py  watch.py
battle_royale/runs/10p_lstm_critic/: events.out.tfevents.1771810676.north  events.out.tfevents.1771814806.north  events.out.tfevents.1771814882.north  events.out.tfevents.1771829994.north  events.out.tfevents.1771830002.north
battle_royale/runs/apex_rp/: events.out.tfevents.1772504988.north  events.out.tfevents.1772505125.north  events.out.tfevents.1772514575.north  events.out.tfevents.1772584680.north  events.out.tfevents.1772611037.north  events.out.tfevents.1772650876.north  events.out.tfevents.1772693728.north
legacy/agents/: README.md  ppo_agent.py
legacy/agents/checkpoints/: training_log.csv
legacy/src/: config.py  env.py  main.py  objects.py
scripts/: analyze_attention.py  analyze_engagement_range.py  analyze_gameplay.py  analyze_heal_behavior.py  analyze_heal_usage.py  analyze_tb.py  behavioral_analysis.py  collect_survival.py  critic_initial_prediction.py  elo_results.csv  elo_tournament.py  generate_highlights.py  profile_rollout.py  record_wins.py  replay_highlight.py
src/: batched_env.py  config.py  env.py  main.py  mdp.py  model.py  objects.py  utils.py
tests/: test_batched_env.py
(+1 files in other folders)
